Fix - sign in projects

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <li>
             <p>
                 <a href="https://github.com/ssspamqe/Link-Tracker"><b>Link-Tracker</b></a>
-                an application consisting of two services – Telegram bot and Scrapper
+                an application consisting of two services - Telegram bot and Scrapper
                 (an application that checks resource updates using links stored in PostgreSQL). The client
                 registers in Bot, sends links to the GitHub repository or a question on StackOverflow and
                 receives information about, for example, new answers to a question or a new commit directly in
