--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
         <a href="#skills-part">Skills</a>
         <a href="#projects-part">Projects</a>
         <a href="#contact-with-me-part">Contact with me</a>
+        <br>
+        <br>
+        <a href="comic.html">Comic</a>
     </nav>
 
     <footer>
