Add missing components in html

--- a/comic.html
+++ b/comic.html
@@ -21,8 +21,8 @@
 <main>
 
     <div id="comic-card">
-        <h1 id="comic-title"></h1>
-        <img id = "comic-image" alt="A comic sketch">
+        <h1 id="comic-title">Comic title</h1>
+        <img id = "comic-image" src="resources/cat.jpg" alt="A comic sketch">
         <p id = "upload-date"></p>
     </div>
 
