Add basic main page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <aside id="sidebar">
-    <img id="avatar-image" src="resources/me.jpg" alt="avatar">
+    <img id="avatar-image" src="personal-page-svetle/src/assets/avatar.jpg" alt="avatar">
     <p id="avatar-label">Stepan Dementev</p>
     <nav id="sidebar-nav">
         <a href="#header-part">Top</a>
@@ -91,13 +91,13 @@
         <h1>Contact with me</h1>
         <div id="contacts">
             <a href="https://github.com/ssspamqe" id="gh-link">
-                <img src="resources/github_logo.png" alt="github logo">
+                <img src="personal-page-svetle/src/assets/github_logo.png" alt="github logo">
             </a>
             <a href="https://t.me/dementevssstepan" id="tg-link">
-                <img src="resources/telegram_logo.png" alt="telegram logo">
+                <img src="personal-page-svetle/src/assets/telegram_logo.png" alt="telegram logo">
             </a>
             <a href="mailto:dementevssstepan@gmail.com" id="email">
-                <img src="resources/gmail_logo.png" alt="gmail logo">
+                <img src="personal-page-svetle/src/assets/gmail_logo.png" alt="gmail logo">
             </a>
         </div>
     </div>
