--- a/comic.html
+++ b/comic.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <aside id="sidebar">
-    <img id="avatar-image" src="resources/me.jpg" alt="avatar">
+    <img id="avatar-image" src="personal-page-svetle/src/assets/avatar.jpg" alt="avatar">
     <p id="avatar-label">Stepan Dementev</p>
     <nav id="sidebar-nav">
         <a href="index.html">Back to main page</a>
@@ -22,7 +22,7 @@
 
     <div id="comic-card">
         <h1 id="comic-title">Comic title</h1>
-        <img id = "comic-image" src="resources/cat.jpg" alt="A comic sketch">
+        <img id = "comic-image" src="personal-page-svetle/src/assets/cat.jpg" alt="A comic sketch">
         <p id = "upload-date"></p>
     </div>
 
