--- a/index.html
+++ b/index.html
@@ -5,27 +5,25 @@
         <link rel="icon" href="./favicon.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         
-		<link href="./_app/immutable/assets/0.IX_d0JDn.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.DOK7Qsp0.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/styles.BWpLtoxl.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CcOhgw1r.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.cYk4w9RV.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.Cewbzyqj.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/control.CYgJF_JY.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.i_HGr2WP.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.DeFMAK_U.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.BIfPtohl.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.L7P4S7Aj.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.Drx79yn7.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.ByIbjx2E.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.W2pu3yam.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.DUjylSIB.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.BeC_g9jV.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.CuaEUsLz.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.CR62IFT3.js">
     </head>
     <body data-sveltekit-preload-data="hover">
-        <div style="display: contents">  <aside id="sidebar" class="svelte-6plkuq" data-svelte-h="svelte-1m675fa"><header class="svelte-6plkuq"><img id="avatar-image" src="/personal-page.github.io/_app/immutable/assets/avatar.4ROL9QmQ.jpg" alt="avatar" class="svelte-6plkuq"> <p id="avatar-label" class="svelte-6plkuq">Stepan Dementev</p> <nav id="sidebar-nav" class="svelte-6plkuq"><a href="." class="svelte-6plkuq">Hello!</a> <a href="./about" class="svelte-6plkuq">About Me</a> <a href="./skills" class="svelte-6plkuq">Skills</a> <a href="./projects" class="svelte-6plkuq">Projects</a> <a href="./contact" class="svelte-6plkuq">Contact with me</a> <a href="./comic" class="svelte-6plkuq">Comic</a></nav></header> <footer class="svelte-6plkuq">Created at Innopolis University</footer></aside> <header data-svelte-h="svelte-1w8pbqr"><div class="structure-part" id="header-part"><h1>HELLO!<br>
+        <div style="display: contents">  <aside id="sidebar" class="svelte-6plkuq" data-svelte-h="svelte-fdzq3f"><header class="svelte-6plkuq">  <p id="avatar-label" class="svelte-6plkuq">Stepan Dementev</p> <nav id="sidebar-nav" class="svelte-6plkuq"><a href="." class="svelte-6plkuq">Hello!</a> <a href="./about" class="svelte-6plkuq">About Me</a> <a href="./skills" class="svelte-6plkuq">Skills</a> <a href="./projects" class="svelte-6plkuq">Projects</a> <a href="./contact" class="svelte-6plkuq">Contact with me</a> <a href="./comic" class="svelte-6plkuq">Comic</a></nav></header> <footer class="svelte-6plkuq">Created at Innopolis University</footer></aside> <header data-svelte-h="svelte-1w8pbqr"><div class="structure-part" id="header-part"><h1>HELLO!<br>
             I AM STEPAN<br>
             BACKEND DEVELOPER</h1> <p>Java Spring programmer, cats lover</p></div></header> 
 			
 			<script>
 				{
-					__sveltekit_8xpgkx = {
-						base: new URL(".", location).pathname.slice(0, -1),
-						assets: "/personal-page.github.io"
+					__sveltekit_qgafbz = {
+						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
@@ -33,8 +31,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CcOhgw1r.js"),
-						import("./_app/immutable/entry/app.i_HGr2WP.js")
+						import("./_app/immutable/entry/start.Drx79yn7.js"),
+						import("./_app/immutable/entry/app.DUjylSIB.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
