--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
         
 		<link href="./_app/immutable/assets/0.DOK7Qsp0.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/styles.BWpLtoxl.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.Drx79yn7.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.ByIbjx2E.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BLGMqtrw.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.C8AQuGt_.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.W2pu3yam.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DUjylSIB.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.ZWwL7zOc.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.BeC_g9jV.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/0.CuaEUsLz.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/2.CR62IFT3.js">
@@ -22,7 +22,7 @@
 			
 			<script>
 				{
-					__sveltekit_qgafbz = {
+					__sveltekit_16fb649 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -31,8 +31,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.Drx79yn7.js"),
-						import("./_app/immutable/entry/app.DUjylSIB.js")
+						import("./_app/immutable/entry/start.BLGMqtrw.js"),
+						import("./_app/immutable/entry/app.ZWwL7zOc.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
